//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "Project Name" {
  database_type: 'PostgreSQL'
  Note: 'Test project description'
}

Table User {
  id String [pk]
  name String
  email String [unique, not null]
  image String
  emailVerified DateTime
  password String
  role UserRole [not null, default: 'USER']
  createdAt DateTime [default: `now()`, not null]
  isTwoFactorEnabled Boolean [not null, default: false]
  accounts Account [not null]
  authoredBooks Book [not null]
  twoFactorConfirmation TwoFactorConfirmation
  bookshelf UserBook [not null]
}

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table VerificationToken {
  id String [pk]
  email String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (email, token) [unique]
  }
}

Table PasswordResetToken {
  id String [pk]
  email String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (email, token) [unique]
  }
}

Table TwoFactorToken {
  id String [pk]
  email String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (email, token) [unique]
  }
}

Table TwoFactorConfirmation {
  id String [pk]
  userId String [unique, not null]
  user User [not null]
}

Table Book {
  id String [pk]
  title String [not null]
  description String [not null]
  coverImage String
  genre Genre
  tags String[] [not null]
  status BookStatus [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  authorId String [not null]
  author User [not null]
  chapters Chapter [not null]
  bookshelfOwners UserBook [not null]
}

Table UserBook {
  userId String [not null]
  bookId String [not null]
  addedAt DateTime [default: `now()`, not null]
  book Book [not null]
  user User [not null]

  indexes {
    (userId, bookId) [pk]
  }
}

Table Chapter {
  id String [pk]
  title String [not null]
  content String [not null]
  order Int [not null]
  bookId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  book Book [not null]

  indexes {
    (bookId, order) [unique]
  }
}

Enum UserRole {
  ADMIN
  USER
}

Enum Genre {
  FICTION
  NONFICTION
  MYSTERY
  FANTASY
  SCIFI
  ROMANCE
  HORROR
  BIOGRAPHY
  HISTORY
  POETRY
  OTHER
  ADVENTURE
  CHILDREN
  THRILLER
  CRIME
  DRAMA
  COMEDY
  ACTION
  SELF_HELP
  ART
  COOKING
  JUVENILE_NONFICTION
  POLITICAL_SCIENCE
  GRIEF
  LITERARY_CRITICISM
  FAMILY_RELATIONSHIPS
  COMPUTERS
  BIOGRAPHY_AUTOBIOGRAPHY
  YOUNG_ADULT_FICTION
}

Enum BookStatus {
  DRAFT
  PUBLISHED
  PAUSED
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: TwoFactorConfirmation.userId - User.id [delete: Cascade]

Ref: Book.authorId > User.id

Ref: UserBook.bookId > Book.id

Ref: UserBook.userId > User.id

Ref: Chapter.bookId > Book.id